[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/interface/hud/Interface.gd" type="Script" id=1]
[ext_resource path="res://source/interface/hud/RaphiePlate.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/interface/hud/KeyPreview.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/interface/hud/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/interface/hud/EnemyPlate.tscn" type="PackedScene" id=5]

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="RaphiePlate" parent="." instance=ExtResource( 2 )]

[node name="KeyPreview" parent="." instance=ExtResource( 3 )]
margin_top = -130.0
margin_bottom = -130.0

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]

[node name="EnemyPlate" parent="." groups=[
"EnemyPlate",
] instance=ExtResource( 5 )]
